--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -186,10 +186,10 @@ x-rpmbuild:
         pybind11_version: 2.7.1
     rack:
       image: rpmbuild-rack
-      version: &rack_version '2.2.3-1'
+      version: &rack_version 2.2.3-1
       arch: noarch
       name: rubygem-rack
-      spec_file: 'SPECS/rubygem-rack.spec'
+      spec_file: SPECS/rubygem-rack.spec
     rubygem-libxml-ruby:
       image: rpmbuild-rubygem-libxml-ruby
       version: &rubygem_libxml_ruby_version '3.2.2-1'
@@ -516,11 +516,11 @@ services:
       <<: *build_defaults
       args:
         gem_packages: >-
-          fcgi
+          memcache-client
           minitest
           minitest-sprint
           minitest-global_expectations
-          thin
+          webrick
         packages: "${RPMBUILD_RACK_PACKAGES}"
         rpmbuild_channel: *rpmbuild_channel
       dockerfile: docker/Dockerfile.rpmbuild-geoint-deps
