--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,12 @@ x-rpmbuild:
       image: rpmbuild-fonts
       version: &hanazono-fonts_version '20170904-1'
       arch: noarch
+    iniparser:
+      image: rpmbuild-generic
+      version: &iniparser_version 4.1-1
+    journald-cloudwatch-logs:
+      image: rpmbuild-journald-cloudwatch-logs
+      version: &journald-cloudwatch-logs_version '0.2.0-1'
     libgeotiff:
       image: rpmbuild-libgeotiff
       version: &libgeotiff_version 1.7.1-1
@@ -90,9 +96,6 @@ x-rpmbuild:
     libpqxx:
       image: rpmbuild-libpqxx
       version: &libpqxx_version 7.7.3-1
-    journald-cloudwatch-logs:
-      image: rpmbuild-journald-cloudwatch-logs
-      version: &journald-cloudwatch-logs_version '0.2.0-1'
     libkml:
       image: rpmbuild-libkml
       version: &libkml_version  1.3.0-1
@@ -112,7 +115,7 @@ x-rpmbuild:
         proj_min_version: *proj_min_version
     mod_tile:
       image: rpmbuild-mod_tile
-      version: &mod_tile_version '0.6.1-2'
+      version: &mod_tile_version 0.6.1-1
     openstreetmap-carto:
       image: rpmbuild-openstreetmap-carto
       version: &openstreetmap_carto_version '5.4.0-2'
