The `glibc-langpack-en` package has locale files to use `en_US.UTF-8` again.

--- a/docker/Dockerfile.rpmbuild
+++ b/docker/Dockerfile.rpmbuild
@@ -12,7 +12,7 @@ ARG rpmbuild_gid=${rpmbuild_uid}
 ARG rpmbuild_group=${rpmbuild_user}
 ARG rpmbuild_home=/${rpmbuild_user}
 ARG rpmbuild_lang=en_US.UTF-8
-ARG rpmbuild_locale=C.UTF-8
+ARG rpmbuild_locale=en_US.UTF-8
 
 # Ensure proper language/locale environment settings, and place key arguments
 # in environment to allow access in child containers.
@@ -52,6 +52,7 @@ RUN --mount=type=cache,target=/var/cache/dnf \
       gdb \
       git \
       git-core \
+      glibc-langpack-en \
       less \
       libtool \
       make \
