--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ x-rpmbuild:
         proj_min_version: *proj_min_version
     geos:
       image: rpmbuild-geos
-      version: &geos_version '3.9.2-1'
+      version: &geos_version 3.9.3-1
     gpsbabel:
       image: rpmbuild-gpsbabel
       version: &gpsbabel_version '1.7.0-1'
