--- a/docker/Dockerfile.rpmbuild-gdal
+++ b/docker/Dockerfile.rpmbuild-gdal
@@ -62,7 +62,8 @@ RUN --mount=type=cache,target=/var/cache/yum \
     /tmp/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
     && \
     rm -f /tmp/*.rpm && \
-    if [ -n "${packages}" ] ; then yum -y install ${packages}; fi
+    if [ -n "${packages}" ] ; then yum -y install ${packages}; fi && \
+    chown -R ${RPMBUILD_USER}:${RPMBUILD_GROUP} /var/run/postgresql
 
 # Install Python 3 documentation and packages.
 RUN pip3 install --disable-pip-version-check --require-hashes \
