--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ x-rpmbuild:
       version: '1.2.5-1'
     gdal:
       image: rpmbuild-gdal
-      version: &gdal_version 3.2.3-2
+      version: &gdal_version 3.2.3-3
       defines:
         geos_min_version: *geos_min_version
         proj_min_version: *proj_min_version
@@ -96,6 +96,11 @@ x-rpmbuild:
     mod_tile:
       image: rpmbuild-mod_tile
       version: &mod_tile_version '0.6.1-2'
+    ogdi:
+      image: rpmbuild-ogdi
+      version: &ogdi_version '4.1.0-1'
+      defines:
+        tag: '4_1_0'
     openstreetmap-carto:
       image: rpmbuild-openstreetmap-carto
       version: &openstreetmap_carto_version '5.4.0-2'
@@ -294,6 +299,7 @@ services:
         gpsbabel_version: *gpsbabel_version
         libgeotiff_version: *libgeotiff_version
         libkml_version: *libkml_version
+        ogdi_version: *ogdi_version
         packages: "${RPMBUILD_GDAL_PACKAGES}"
         proj_version: *proj_version
         rpmbuild_channel: *rpmbuild_channel
@@ -423,6 +429,16 @@ services:
       <<: *build_defaults
       args:
         packages: "${RPMBUILD_MOD_TILE_PACKAGES}"
+        rpmbuild_channel: *rpmbuild_channel
+      dockerfile: docker/Dockerfile.rpmbuild-geoint-deps
+  rpmbuild-ogdi:
+    <<: *service_defaults
+    depends_on:
+      - rpmbuild
+    build:
+      <<: *build_defaults
+      args:
+        packages: "${RPMBUILD_OGDI_PACKAGES}"
         rpmbuild_channel: *rpmbuild_channel
       dockerfile: docker/Dockerfile.rpmbuild-geoint-deps
   rpmbuild-openstreetmap-carto:
