--- a/docker/Dockerfile.rpmbuild
+++ b/docker/Dockerfile.rpmbuild
@@ -29,6 +29,7 @@ ENV LANG=${rpmbuild_lang} \
     RPMBUILD_USER=${rpmbuild_user}
 
 # Install basic development and RPM authoring tools.
+# hadolint ignore=DL3032,DL3033
 RUN --mount=type=cache,target=/var/cache/yum \
     yum-config-manager --save \
         --setopt=keepcache=1 \
