--- a/docker/Dockerfile.rpmbuild-libosmium-generic
+++ b/docker/Dockerfile.rpmbuild-libosmium-generic
@@ -13,14 +13,15 @@ COPY RPMS/noarch/libosmium-devel-${libosmium_version}${RPMBUILD_DIST}.noarch.rpm
      /tmp/
 
 SHELL ["/bin/bash", "-c"]
+# hadolint ignore=DL3013,DL3032,DL3033
 RUN --mount=type=cache,target=/var/cache/yum \
     yum install -y \
-    /tmp/libosmium-devel-${libosmium_version}${RPMBUILD_DIST}.noarch.rpm \
-    /tmp/protozero-devel-${protozero_version}${RPMBUILD_DIST}.noarch.rpm \
+    "/tmp/libosmium-devel-${libosmium_version}${RPMBUILD_DIST}.noarch.rpm" \
+    "/tmp/protozero-devel-${protozero_version}${RPMBUILD_DIST}.noarch.rpm" \
     && \
     rm -f /tmp/*.rpm && \
     if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
-    if [ -n "${python3_packages}" ] ; then pip3 install --disable-pip-version-check ${python3_packages}; fi
+    if [ -n "${python3_packages}" ] ; then pip3 install --disable-pip-version-check --no-cache-dir --quiet ${python3_packages}; fi
 
 # Use unprivileged RPM build user and work directory by default.
 USER ${RPMBUILD_USER}
