--- a/docker/Dockerfile.rpmbuild-libgeotiff
+++ b/docker/Dockerfile.rpmbuild-libgeotiff
@@ -12,16 +12,18 @@ COPY RPMS/x86_64/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
      /tmp/
 
 SHELL ["/bin/bash", "-c"]
+# hadolint ignore=DL3032
 RUN --mount=type=cache,target=/var/cache/yum \
     yum install -y \
-    /tmp/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/sqlite-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
+    "/tmp/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/sqlite-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm" \
     && \
     rm -f /tmp/*.rpm
 
 # If any package dependencies are needed, install them.
+# hadolint ignore=DL3032,DL3033
 RUN --mount=type=cache,target=/var/cache/yum \
     if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
     /usr/local/bin/rpmbuild-user.sh && \
