--- a/docker/Dockerfile.rpmbuild-libosmium
+++ b/docker/Dockerfile.rpmbuild-libosmium
@@ -8,13 +8,15 @@ COPY RPMS/noarch/protozero-devel-${protozero_version}${RPMBUILD_DIST}.noarch.rpm
      /tmp/
 
 SHELL ["/bin/bash", "-c"]
+# hadolint ignore=DL3032
 RUN --mount=type=cache,target=/var/cache/yum \
     yum install -y \
-    /tmp/protozero-devel-${protozero_version}${RPMBUILD_DIST}.noarch.rpm \
+    "/tmp/protozero-devel-${protozero_version}${RPMBUILD_DIST}.noarch.rpm" \
     && \
     rm -f /tmp/*.rpm
 
 # If any package dependencies are needed, install them.
+# hadolint ignore=DL3032,DL3033
 RUN --mount=type=cache,target=/var/cache/yum \
     if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
     /usr/local/bin/rpmbuild-user.sh && \
