--- a/docker/Dockerfile.rpmbuild-postgis-generic
+++ b/docker/Dockerfile.rpmbuild-postgis-generic
@@ -52,36 +52,37 @@ COPY RPMS/x86_64/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
      /tmp/
 
 SHELL ["/bin/bash", "-c"]
+# hadolint ignore=DL3032,DL3033
 RUN --mount=type=cache,target=/var/cache/yum \
     yum install -y \
-    /tmp/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/CGAL-devel-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/FileGDBAPI-${filegdbapi_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/SFCGAL-${sfcgal_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/SFCGAL-devel-${sfcgal_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/gdal-${gdal_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/gdal-devel-${gdal_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/gdal-libs-${gdal_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/geos-${geos_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/geos-devel-${geos_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/gpsbabel-${gpsbabel_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/libgeotiff-${libgeotiff_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/libgeotiff-devel-${libgeotiff_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/libkml-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/libkml-devel-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/postgis-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/postgis-devel-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/postgis-utils-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/protobuf-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/protobuf-compiler-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/protobuf-devel-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/protobuf-c-${protobuf_c_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/protobuf-c-compiler-${protobuf_c_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/protobuf-c-devel-${protobuf_c_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/sqlite-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
+    "/tmp/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/CGAL-devel-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/FileGDBAPI-${filegdbapi_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/SFCGAL-${sfcgal_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/SFCGAL-devel-${sfcgal_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/gdal-${gdal_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/gdal-devel-${gdal_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/gdal-libs-${gdal_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/geos-${geos_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/geos-devel-${geos_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/gpsbabel-${gpsbabel_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/libgeotiff-${libgeotiff_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/libgeotiff-devel-${libgeotiff_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/libkml-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/libkml-devel-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/postgis-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/postgis-devel-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/postgis-utils-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/protobuf-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/protobuf-compiler-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/protobuf-devel-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/protobuf-c-${protobuf_c_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/protobuf-c-compiler-${protobuf_c_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/protobuf-c-devel-${protobuf_c_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/sqlite-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm" \
     && \
     rm -f /tmp/*.rpm && \
     if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi
