--- a/docker/Dockerfile.rpmbuild-protobuf-c
+++ b/docker/Dockerfile.rpmbuild-protobuf-c
@@ -10,15 +10,17 @@ COPY RPMS/x86_64/protobuf-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm \
      /tmp/
 
 SHELL ["/bin/bash", "-c"]
+# hadolint ignore=DL3032
 RUN --mount=type=cache,target=/var/cache/yum \
     yum install -y \
-    /tmp/protobuf-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/protobuf-compiler-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/protobuf-devel-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm \
+    "/tmp/protobuf-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/protobuf-compiler-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/protobuf-devel-${protobuf_version}${RPMBUILD_DIST}.x86_64.rpm" \
     && \
     rm -f /tmp/*.rpm
 
 # If any package dependencies are needed, install them.
+# hadolint ignore=DL3032,DL3033
 RUN --mount=type=cache,target=/var/cache/yum \
     if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
     /usr/local/bin/rpmbuild-user.sh && \
