--- a/docker/Dockerfile.rpmbuild-sfcgal
+++ b/docker/Dockerfile.rpmbuild-sfcgal
@@ -9,14 +9,16 @@ COPY RPMS/x86_64/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
      /tmp/
 
 SHELL ["/bin/bash", "-c"]
+# hadolint ignore=DL3032
 RUN --mount=type=cache,target=/var/cache/yum \
     yum install -y \
-    /tmp/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/CGAL-devel-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
+    "/tmp/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/CGAL-devel-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm" \
     && \
     rm -f /tmp/*.rpm
 
 # If any package dependencies are needed, install them.
+# hadolint ignore=DL3032,DL3033
 RUN --mount=type=cache,target=/var/cache/yum \
     if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
     /usr/local/bin/rpmbuild-user.sh && \
