Set `rpmlint` to `treat individual errors as non-fatal`

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Lint with rpmlint
         run: |
-          rpmlint --rpmlintrc .rpmlintrc SPECS/*.spec
+          rpmlint --permissive --rpmlintrc .rpmlintrc SPECS/*.spec
 
   shellcheck:
     name: Lint - shellcheck
