--- a/docker/Dockerfile.rpmbuild-postgis-generic
+++ b/docker/Dockerfile.rpmbuild-postgis-generic
@@ -9,6 +9,7 @@ ARG geos_version
 ARG gpsbabel_version
 ARG libgeotiff_version
 ARG libkml_version
+ARG ogdi_version
 ARG packages
 ARG postgis_version
 ARG proj_version
@@ -36,6 +37,8 @@ COPY RPMS/x86_64/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/libgeotiff-devel-${libgeotiff_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/libkml-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/libkml-devel-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm \
+     RPMS/x86_64/ogdi-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm \
+     RPMS/x86_64/ogdi-devel-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/postgis-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm \
@@ -69,6 +72,8 @@ RUN --mount=type=cache,target=/var/cache/yum \
     /tmp/libgeotiff-devel-${libgeotiff_version}${RPMBUILD_DIST}.x86_64.rpm \
     /tmp/libkml-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm \
     /tmp/libkml-devel-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm \
+    /tmp/ogdi-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm \
+    /tmp/ogdi-devel-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm \
     /tmp/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
     /tmp/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
     /tmp/postgis-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm \
