Add some Linting (#40)
* `black`
* `hadolint`
* `rpmlint` (currently runs with `--permissive`)
* `shellcheck`
* `yamllint`

--- a/docker/Dockerfile.rpmbuild
+++ b/docker/Dockerfile.rpmbuild
@@ -29,6 +29,7 @@ ENV LANG=${rpmbuild_lang} \
     RPMBUILD_USER=${rpmbuild_user}
 
 # Install basic development and RPM authoring tools.
+# hadolint ignore=DL3040,DL3041
 RUN --mount=type=cache,target=/var/cache/dnf \
     dnf -q -y install "dnf-command(config-manager)" && \
     dnf config-manager --save \
