--- a/docker/Dockerfile.rpmbuild-armadillo
+++ b/docker/Dockerfile.rpmbuild-armadillo
@@ -1,5 +1,6 @@
 ARG rpmbuild_channel
 ARG rpmbuild_image=rpmbuild
+# hadolint ignore=DL3007
 FROM deps-${rpmbuild_channel}_${rpmbuild_image}:latest
 ARG packages
 ARG arpack_version
@@ -9,14 +10,16 @@ COPY RPMS/x86_64/arpack-${arpack_version}${RPMBUILD_DIST}.x86_64.rpm \
      /tmp/
 
 SHELL ["/bin/bash", "-c"]
+# hadolint ignore=DL3040,DL3041
 RUN --mount=type=cache,target=/var/cache/dnf \
     dnf install -y \
-    /tmp/arpack-${arpack_version}${RPMBUILD_DIST}.x86_64.rpm \
-    /tmp/arpack-devel-${arpack_version}${RPMBUILD_DIST}.x86_64.rpm \
+    "/tmp/arpack-${arpack_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/arpack-devel-${arpack_version}${RPMBUILD_DIST}.x86_64.rpm" \
     && \
     rm -f /tmp/*.rpm
 
 # If any package dependencies are needed, install them.
+# hadolint ignore=DL3040,DL3041
 RUN --mount=type=cache,target=/var/cache/dnf \
     if [ -n "${packages}" ] ; then dnf -q -y install ${packages}; fi && \
     /usr/local/bin/rpmbuild-user.sh && \
