Fix OGDI is missing (#41)
`gdal-libs` requires `libogdi.so.4()(64bit)` and therefore `ogdi/ogdi-devel` must be installed into Docker images requiring `gdal/gdal-libs`
I.E.:
```
Provides: gdal-libs = 3.2.3-3.el7 gdal-libs(x86-64) = 3.2.3-3.el7 libgdal.so.28()(64bit)
Requires(interp): /sbin/ldconfig /sbin/ldconfig
Requires(rpmlib): rpmlib(CompressedFileNames) <= 3.0.4-1 rpmlib(FileDigests) <= 4.6.0-1 rpmlib(PayloadFilesHavePrefix) <= 4.0-1
Requires(post): /sbin/ldconfig
Requires(postun): /sbin/ldconfig
Requires: ld-linux-x86-64.so.2()(64bit) ld-linux-x86-64.so.2(GLIBC_2.3)(64bit) libFileGDBAPI.so()(64bit) libSFCGAL.so.1()(64bit) libarmadillo.so.10()(64bit) libc.so.6()(64bit) libc.so.6(GLIBC_2.11)(64bit) libc.so.6(GLIBC_2.14)(64bit) libc.so.6(GLIBC_2.15)(64bit) libc.so.6(GLIBC_2.2.5)(64bit) libc.so.6(GLIBC_2.3)(64bit) libc.so.6(GLIBC_2.3.4)(64bit) libc.so.6(GLIBC_2.4)(64bit) libc.so.6(GLIBC_2.7)(64bit) libcfitsio.so.2()(64bit) libcurl.so.4()(64bit) libdap.so.17()(64bit) libdapclient.so.6()(64bit) libdapserver.so.7()(64bit) libdl.so.2()(64bit) libdl.so.2(GLIBC_2.2.5)(64bit) libexpat.so.1()(64bit) libfgdbunixrtl.so()(64bit) libfreexl.so.1()(64bit) libgcc_s.so.1()(64bit) libgcc_s.so.1(GCC_3.0)(64bit) libgcc_s.so.1(GCC_4.2.0)(64bit) libgeos_c.so.1()(64bit) libgeotiff.so.5()(64bit) libgif.so.4()(64bit) libgta.so.0()(64bit) libhdf5.so.8()(64bit) libjasper.so.1()(64bit) libjpeg.so.62()(64bit) libjpeg.so.62(LIBJPEG_6.2)(64bit) libjson-c.so.2()(64bit) libkmlbase.so.1()(64bit) libkmldom.so.1()(64bit) libkmlengine.so.1()(64bit) libkmlregionator.so.1()(64bit) libkmlxsd.so.1()(64bit) liblzma.so.5()(64bit) libm.so.6()(64bit) libm.so.6(GLIBC_2.2.5)(64bit) libnetcdf.so.7()(64bit) libodbc.so.2()(64bit) libodbcinst.so.2()(64bit) libogdi.so.4()(64bit) libopenjp2.so.7()(64bit) libpcre.so.1()(64bit) libpng15.so.15()(64bit) libpng15.so.15(PNG15_0)(64bit) libpoppler.so.46()(64bit) libpq.so.5()(64bit) libproj.so.19()(64bit) libpthread.so.0()(64bit) libpthread.so.0(GLIBC_2.2.5)(64bit) 

--- a/docker/Dockerfile.rpmbuild-mapnik-generic
+++ b/docker/Dockerfile.rpmbuild-mapnik-generic
@@ -10,6 +10,7 @@ ARG gpsbabel_version
 ARG libgeotiff_version
 ARG libkml_version
 ARG mapnik_version
+ARG ogdi_version
 ARG packages
 ARG postgis_version
 ARG proj_version
@@ -41,6 +42,8 @@ COPY RPMS/x86_64/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/mapnik-devel-${mapnik_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/mapnik-static-${mapnik_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/mapnik-utils-${mapnik_version}${RPMBUILD_DIST}.x86_64.rpm \
+     RPMS/x86_64/ogdi-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm \
+     RPMS/x86_64/ogdi-devel-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/postgis-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm \
@@ -79,6 +82,8 @@ RUN --mount=type=cache,target=/var/cache/yum \
     "/tmp/mapnik-devel-${mapnik_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/mapnik-static-${mapnik_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/mapnik-utils-${mapnik_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/ogdi-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/ogdi-devel-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/postgis-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm" \
