--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -409,6 +409,7 @@ services:
         gpsbabel_version: *gpsbabel_version
         libgeotiff_version: *libgeotiff_version
         libkml_version: *libkml_version
+        ogdi_version: *ogdi_version
         packages: ${RPMBUILD_MAPNIK_PACKAGES}
         postgis_version: *postgis_version
         proj_version: *proj_version
@@ -488,6 +489,7 @@ services:
         libgeotiff_version: *libgeotiff_version
         libkml_version: *libkml_version
         libosmium_version: *libosmium_version
+        ogdi_version: *ogdi_version
         packages: ${RPMBUILD_OSM2PGSQL_PACKAGES}
         postgis_version: *postgis_version
         proj_version: *proj_version
@@ -533,6 +535,7 @@ services:
         gpsbabel_version: *gpsbabel_version
         libgeotiff_version: *libgeotiff_version
         libkml_version: *libkml_version
+        ogdi_version: *ogdi_version
         packages: ${RPMBUILD_POSTGIS_PACKAGES}
         proj_version: *proj_version
         protobuf_version: *protobuf_version
@@ -581,6 +584,7 @@ services:
         libgeotiff_version: *libgeotiff_version
         libkml_version: *libkml_version
         mapnik_version: *mapnik_version
+        ogdi_version: *ogdi_version
         packages: ${RPMBUILD_PYTHON_MAPNIK_PACKAGES}
         postgis_version: *postgis_version
         proj_version: *proj_version
