--- a/docker/Dockerfile.rpmbuild-osm2pgsql
+++ b/docker/Dockerfile.rpmbuild-osm2pgsql
@@ -10,6 +10,7 @@ ARG gpsbabel_version
 ARG libgeotiff_version
 ARG libkml_version
 ARG libosmium_version
+ARG ogdi_version
 ARG packages
 ARG postgis_version
 ARG proj_version
@@ -38,6 +39,8 @@ COPY RPMS/x86_64/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/libkml-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/libkml-devel-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/noarch/libosmium-devel-${libosmium_version}${RPMBUILD_DIST}.noarch.rpm \
+     RPMS/x86_64/ogdi-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm \
+     RPMS/x86_64/ogdi-devel-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/postgis-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm \
@@ -74,6 +77,8 @@ RUN --mount=type=cache,target=/var/cache/yum \
     "/tmp/libkml-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/libkml-devel-${libkml_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/libosmium-devel-${libosmium_version}${RPMBUILD_DIST}.noarch.rpm" \
+    "/tmp/ogdi-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/ogdi-devel-${ogdi_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/postgis-${postgis_version}${RPMBUILD_DIST}.x86_64.rpm" \
